# Coleccion-de-Ejercicios-Excepciones

./: CMakeLists.txt  Ejercicio_2.cpp  Ejercicio_4.cpp  Ejercicio_5.cpp  Ejercicio_6.cpp  Ejercicio_7.cpp  README.md  main.cpp
Coleccion De Ejercicios/: Ejercicio_3.cpp
Coleccion De Ejercicios/Ejercicio1/: CMakeLists.txt
Coleccion De Ejercicios/Ejercicio2/: CMakeLists.txt  Ejercicio_2.cpp
Coleccion De Ejercicios/Ejercicio3/: CMakeLists.txt  Ejercicio_3.cpp
Coleccion De Ejercicios/Ejercicio4/: CMakeLists.txt  Ejercicio_4.cpp
Coleccion De Ejercicios/Ejercicio5/: CMakeLists.txt  Ejercicio_5.cpp
Coleccion De Ejercicios/Ejercicio6/: CMakeLists.txt  Ejercicio_6.cpp
Coleccion De Ejercicios/Ejercicio7/: CMakeLists.txt  Ejercicio_7.cpp
Coleccion De Ejercicios/Ejercicio8/: CMakeLists.txt
Collecion de ejercicios/: CMakeLists.txt  Ejercicio_1.cpp  Ejercicio_8_extra.cpp
