cmake_minimum_required(VERSION 3.29)
project(Coleccion_de_Ejercicios_Excepciones)

set(CMAKE_CXX_STANDARD 14)

add_executable(Coleccion_de_Ejercicios_Excepciones
        "Collecion de ejercicios/Ejercicio_1.cpp"
        "Collecion de ejercicios/Ejercicio_2.cpp"
        "Collecion de ejercicios/Ejercicio_3.cpp"
        "Collecion de ejercicios/Ejercicio_4.cpp"
        "Collecion de ejercicios/Ejercicio_5.cpp"
        "Collecion de ejercicios/Ejercicio_6.cpp"
        "Collecion de ejercicios/Ejercicio_7.cpp"
        "Collecion de ejercicios/Ejercicio_8_extra.cpp"
        main.cpp)
