cmake_minimum_required(VERSION 3.29)
project(Coleccion_de_Ejercicios_Excepciones)

set(CMAKE_CXX_STANDARD 14)

add_executable(Coleccion_de_Ejercicios_Excepciones
        "Coleccion De Ejercicios/Ejercicio_1.cpp"
        "Coleccion De Ejercicios/Ejercicio_2.cpp"
        "Coleccion De Ejercicios/Ejercicio_3.cpp"
        "Coleccion De Ejercicios/Ejercicio_4.cpp"
        "Coleccion De Ejercicios/Ejercicio_5.cpp"
        "Coleccion De Ejercicios/Ejercicio_6.cpp"
        "Coleccion De Ejercicios/Ejercicio_7.cpp"
        "Coleccion De Ejercicios/Ejercicio_8_extra.cpp"
        main.cpp)
