cmake_minimum_required(VERSION 3.29)
project(Coleccion_de_Ejercicios_Excepciones)

set(CMAKE_CXX_STANDARD 14)

add_executable(Coleccion_de_Ejercicios_Excepciones
        Ejercicio_1.cpp
        Ejercicio_2.cpp
        Ejercicio_3.cpp
        Ejercicio_4.cpp
        Ejercicio_5.cpp
        Ejercicio_6.cpp
        Ejercicio_7.cpp
        Ejercicio_8_extra.cpp)
